[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focus"
version = "0.1.0"
description = "A script for handling telescope focus"
authors = [
    { name = "Vinicius Bilck"}
]
license = { text = "MIT" }
dependencies = [
    "pyserial>=3.0.0"
]

[project.scripts]
focus = "focuser.terminal:main"
